Updated code to improve readability and maintainability
The code has been revised to use the `var` keyword to enhance code legibility in various Java classes. Additionally, several fields in `AbstractIntegrationTest.java` have been marked as `final` to enhance code immutability and reduce the chance of unexpected mutation.